Implemented reactions on frontend, refactored Reactions